# Secure-Hash-Tool

./: README.md
Secure-Hash-Tool/: Cargo.toml
Secure-Hash-Tool/src/: main.rs
Secure-Hash-Tool/src/Hashing/: algorithms.rs  hash.rs  opt.rs
Secure-Hash-Tool/src/hashing/: algorithms.rs  hash.rs  mod.rs  opt.rs
