[package]
name = "Secure-Hash-Tool"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "secureHash"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md2 = "0.10.2"
md4 = "0.10.2"
md5 = "0.7.0"
sha1 = "0.10.5"
sha2 = "0.10.7"
structopt = "0.3.26"